syntax = "proto3";

package gaapicommon.messages;
option csharp_namespace = "GAAPICommon.Messages";

message PoseDto {
	double X = 1;
	double Y = 2;
	double Heading = 3;
}